<resources>
    <string name="app_name">Proyecto_BeginKOTLIN</string>
    <!-- IMC APP-->
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="recalculate">Re-Calculate</string>
    <string name="error">Error</string>
    <string name="tittle_lowweight">Low Weight</string>
    <string name="tittle_normalweight">Normal Weight</string>
    <string name="tittle_overweight">Over Weight</string>
    <string name="tittle_over2weight">Over 2 Weight</string>
    <string name="description_lowweight"> desc low Weight</string>
    <string name="description_normalweight">desc Normal  Weight</string>
    <string name="description_overweight"> desc Over Weight</string>
    <string name="description_over2weight">desc Over2 Weight</string>
    <!-- TO do APP-->
    <string name="welcome_TodoApp">Welcome to tasks</string>
    <string name="todo_categories">Categories</string>
    <string name="todo_tasks">Tasks</string>
    <string name="addtasktext">Write your task</string>
    <string name="addbtntasktext">Add task</string>
    <string name="dialogbusiness">Business</string>
    <string name="dialogpersonal">Personal</string>
    <string name="dialogother">Other</string>


</resources>