<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_todo_app"
    tools:context=".TODOApp.TodoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_TodoApp"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/TodoApp_text"
        android:layout_marginVertical="44dp"
        android:layout_marginHorizontal="32dp">

    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_categories"
        style="@style/Todosubstyle"

        ></TextView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></androidx.recyclerview.widget.RecyclerView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_tasks"
        style="@style/Todosubstyle"
        android:layout_marginTop="32dp"
        ></TextView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTasks"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        ></androidx.recyclerview.widget.RecyclerView>


</LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:src="@drawable/ic_plus"
        app:tint="@color/white"
        app:fabSize="normal"
        android:backgroundTint="@color/accent"
        android:layout_gravity="end|bottom"
        ></com.google.android.material.floatingactionbutton.FloatingActionButton>
</FrameLayout>